--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
     <meta name="author" content="Steve Fallet">
     <!-- Icône de base du site : FAVICON -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header>
