--- a/informations.html
+++ b/informations.html
@@ -11,12 +11,13 @@
     <meta name="author" content="Steve Fallet">
     <!-- Icône de base du site : FAVICON -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header>
         <a href="index.html">
-            <div>Laure Dinateur</div>
-            <div>Graphiste</div>
+            <div class="nom">Laure Dinateur</div>
+            <div class="metier">Graphiste</div>
         </a>
         <nav>
             <ul>
