--- a/contact.html
+++ b/contact.html
@@ -6,16 +6,40 @@
     <!-- Ajuste la taille de la page aux différents appareils : pc, mobiles, tablettes -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Titre de la page. Visible dans l'onglet du navigateur -->
-    <title>Titre de la page | nom du site</title>
+    <title>Me contacter | Laure Dinateur Graphiste</title>
     <!-- Auteur -->
     <meta name="author" content="Steve Fallet">
     <!-- Icône de base du site : FAVICON -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-    <!-- Titre principal (unique) de la page -->
-	<h1>Titre principal de la page</h1>
-    <!-- Un paragraphe -->
-    <p>Cette page web est incroyable!</p>
+    <header>
+        <a href="index.html">
+            <div class="nom">Laure Dinateur</div>
+            <div class="metier">Graphiste</div>
+        </a>
+        <!-- nav>ul>li*3>a -->
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Accueil</a>
+                </li>
+                <li>
+                    <a href="informations.html">Qui suis-je ?</a>
+                </li>
+                <li>
+                    <a href="contact.html">Me contacter</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h1>Me contacter</h1>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
