--- a/informations.html
+++ b/informations.html
@@ -34,13 +34,40 @@
         </nav>
     </header>
     <main>
+        <img src="images/laure-dinateur-graphiste.jpg"
+             alt="Photo de Laure Dinateur"
+        >
         <h1>
             Laure Dinateur<br>
             Présentation
         </h1>
+
+        <p>Hello, je suis <strong>Laure Dinateur</strong> !
+            Bienvenue sur mon portfolio ou je partage mes réalisations favorites.</p>
+
+        <p>Quand je ne dessine pas, j'aime faire du sport, jouer à des
+            jeux vidéos, boire un bon café ou quelque chose de plus corsé.</p>
+
+        <p>Vous pouvez me suivre sur Twitter, mon nom d'utilisateur est
+            <a href="https://twitter.com/lauredi">@lauredi</a>.</p>
     </main>
     <footer>
-
+        <!-- nav>ul>li*2>a>img -->
+        <nav>
+            <ul>
+                <li>
+                    <a href="https://twitter.com/lauredi">
+                        <img src="images/twitter-badge.png" alt="Lire mes derniers Tweets">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/laure.dinateur">
+                        <img src="images/facebook-badge.png" alt="Lire mes derniers posts">
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <div>&copy;2023 Laure Dinateur</div>
     </footer>
 </body>
 </html>
