ajout footer avec nav sur toutes les pages

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,22 @@
     </main>
 
     <footer>
-
+        <!-- nav>ul>li*2>a>img -->
+        <nav>
+            <ul>
+                <li>
+                    <a href="https://twitter.com/lauredi">
+                        <img src="images/twitter-badge.png" alt="Lire mes derniers Tweets">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/laure.dinateur">
+                        <img src="images/facebook-badge.png" alt="Lire mes derniers posts">
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <div>&copy;2023 Laure Dinateur</div>
     </footer>
 </body>
 </html>
