--- a/index.html
+++ b/index.html
@@ -36,8 +36,23 @@
     <main>
         <h1>Mes réalisations</h1>
     </main>
-	<footer>
-
+    <footer>
+        <!-- nav>ul>li*2>a>img -->
+        <nav>
+            <ul>
+                <li>
+                    <a href="https://twitter.com/lauredi">
+                        <img src="images/twitter-badge.png" alt="Lire mes derniers Tweets">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/laure.dinateur">
+                        <img src="images/facebook-badge.png" alt="Lire mes derniers posts">
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <div>&copy;2023 Laure Dinateur</div>
     </footer>
 </body>
 </html>
