ajout css header, menu et lien actif

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="author" content="Steve Fallet">
     <!-- Icône de base du site : FAVICON -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header>
@@ -22,7 +23,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="index.html">Accueil</a>
+                    <a href="index.html" class="actif">Accueil</a>
                 </li>
                 <li>
                     <a href="informations.html">Qui suis-je ?</a>
