--- a/informations.html
+++ b/informations.html
@@ -11,6 +11,7 @@
     <meta name="author" content="Steve Fallet">
     <!-- Icône de base du site : FAVICON -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header>
@@ -25,7 +26,7 @@
                     <a href="index.html">Accueil</a>
                 </li>
                 <li>
-                    <a href="informations.html">Qui suis-je ?</a>
+                    <a href="informations.html" class="actif">Qui suis-je ?</a>
                 </li>
                 <li>
                     <a href="contact.html">Me contacter</a>
