--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
     <meta name="author" content="Steve Fallet">
     <!-- Icône de base du site : FAVICON -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header>
@@ -28,7 +29,7 @@
                     <a href="informations.html">Qui suis-je ?</a>
                 </li>
                 <li>
-                    <a href="contact.html">Me contacter</a>
+                    <a href="contact.html" class="actif">Me contacter</a>
                 </li>
             </ul>
         </nav>
