ajout liens et contenus page contact.html

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,10 @@
 </head>
 <body>
     <header>
-
+        <a href="index.html">
+            <div class="nom">Laure Dinateur</div>
+            <div class="metier">Graphiste</div>
+        </a>
         <nav>
             <ul>
                 <li><a href="index.html">Acceuil</a></li>
@@ -25,6 +28,45 @@
         </nav>
     </header>
 
-    <h1>Me contacter</h1>
+    <main>
+        <h1>Me contacter</h1>
+        <section>
+            <h2>Informations générales</h2>
+            <p>Actuellement, je ne cherche pas forcément de nouveaux travaux,
+                mais je reste ouvert à toutes propositions. Si vous avez des questions
+                n'hésitez pas à me contacter !</p>
+            <p>Appelez-moi sur mon mobile uniquement pour les demandes urgentes.
+                Sinon, Twitter et email restent les meilleures façons de me joindre.</p>
+        </section>
+        <section>
+            <h2>Informations de contact</h2>
+            <ul>
+                <li><a href="tel:0041741234567">074 123 45 67</a></li>
+                <li><a href="mailto:laure@dinateur.com">laure@dinateur.com</a></li>
+                <li><a href="https://twitter.com/lauredi">@lauredi</a></li>
+                <li><a href="https://www.facebook.com/laure.dinateur">facebook</a></li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <!-- nav>ul>li*2>a>img -->
+        <nav>
+            <ul>
+                <li>
+                    <a href="https://twitter.com/lauredi">
+                        <img src="images/twitter-draw.png" alt="Voir mon Twitter">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/laure.dinateur">
+                        <img src="images/facebook-draw.png" alt="Voir mon Facebook">
+                    </a>
+                </li>
+            </ul>
+
+            <div>&copy;2023 - Laure Dinateur</div>
+        </nav>
+    </footer>
 </body>
 </html>
