--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 <body>
     <!-- header>nav>ul>li*3>a -->
     <header>
+        <a href="index.html">
+            <div class="nom">Laure Dinateur</div>
+            <div class="metier">Graphiste</div>
+        </a>
         <nav>
             <ul>
                 <li><a href="index.html">Acceuil</a></li>
@@ -26,5 +30,25 @@
     </header>
 
 	<h1>Mes réalisations</h1>
+
+    <footer>
+        <!-- nav>ul>li*2>a>img -->
+        <nav>
+            <ul>
+                <li>
+                    <a href="https://twitter.com/lauredi">
+                        <img src="images/twitter-draw.png" alt="Voir mon Twitter">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/laure.dinateur">
+                        <img src="images/facebook-draw.png" alt="Voir mon Facebook">
+                    </a>
+                </li>
+            </ul>
+
+            <div>&copy;2023 - Laure Dinateur</div>
+        </nav>
+    </footer>
 </body>
 </html>
