ajout html réalisations

--- a/index.html
+++ b/index.html
@@ -29,7 +29,53 @@
         </nav>
     </header>
 
-	<h1>Mes réalisations</h1>
+    <main>
+        <h1>Mes réalisations</h1>
+        <!-- ul>li>a>figure>img+figcaption -->
+        <ul>
+            <li>
+                <a href="images/numbers-01.jpg">
+                    <figure>
+                        <img src="images/numbers-01.jpg" alt="Tableau le chiffre 1">
+                        <figcaption>Expérimentation de couleurs</figcaption>
+                    </figure>
+                </a>
+            </li>
+            <li>
+                <a href="images/numbers-02.jpg">
+                    <figure>
+                        <img src="images/numbers-02.jpg" alt="Tableau le chiffre 2">
+                        <figcaption>Jeu de fondus</figcaption>
+                    </figure>
+                </a>
+            </li>
+            <li>
+                <a href="images/numbers-01.jpg">
+                    <figure>
+                        <img src="images/numbers-01.jpg" alt="Tableau le chiffre 1">
+                        <figcaption>Expérimentation de couleurs</figcaption>
+                    </figure>
+                </a>
+            </li>
+            <li>
+                <a href="images/numbers-02.jpg">
+                    <figure>
+                        <img src="images/numbers-02.jpg" alt="Tableau le chiffre 2">
+                        <figcaption>Jeu de fondus</figcaption>
+                    </figure>
+                </a>
+            </li>
+            <li>
+                <a href="images/numbers-01.jpg">
+                    <figure>
+                        <img src="images/numbers-01.jpg" alt="Tableau le chiffre 1">
+                        <figcaption>Expérimentation de couleurs</figcaption>
+                    </figure>
+                </a>
+            </li>
+        </ul>
+    </main>
+
 
     <footer>
         <!-- nav>ul>li*2>a>img -->
