ajout responsive.css

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <!-- Icône de base du site : FAVICON -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
-<body>
+<body class="page-index">
     <!-- header>nav>ul>li*3>a -->
     <header>
         <a href="index.html">
@@ -22,7 +23,7 @@
         </a>
         <nav>
             <ul>
-                <li><a href="index.html">Acceuil</a></li>
+                <li><a class="actif" href="index.html">Acceuil</a></li>
                 <li><a href="informations.html">Qui sui-je ?</a></li>
                 <li><a href="contact.html">Me contacter</a></li>
             </ul>
@@ -32,7 +33,7 @@
     <main>
         <h1>Mes réalisations</h1>
         <!-- ul>li>a>figure>img+figcaption -->
-        <ul>
+        <ul class="realisations">
             <li>
                 <a href="images/numbers-01.jpg">
                     <figure>
