--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,9 @@
     <!-- Icône de base du site : FAVICON -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
-<body>
+<body class="page-contact">
     <header>
         <a href="index.html">
             <div class="nom">Laure Dinateur</div>
@@ -23,30 +24,32 @@
             <ul>
                 <li><a href="index.html">Acceuil</a></li>
                 <li><a href="informations.html">Qui sui-je ?</a></li>
-                <li><a href="contact.html">Me contacter</a></li>
+                <li><a class="actif" href="contact.html">Me contacter</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <h1>Me contacter</h1>
-        <section>
-            <h2>Informations générales</h2>
-            <p>Actuellement, je ne cherche pas forcément de nouveaux travaux,
-                mais je reste ouvert à toutes propositions. Si vous avez des questions
-                n'hésitez pas à me contacter !</p>
-            <p>Appelez-moi sur mon mobile uniquement pour les demandes urgentes.
-                Sinon, Twitter et email restent les meilleures façons de me joindre.</p>
-        </section>
-        <section>
-            <h2>Informations de contact</h2>
-            <ul>
-                <li><a href="tel:0041741234567">074 123 45 67</a></li>
-                <li><a href="mailto:laure@dinateur.com">laure@dinateur.com</a></li>
-                <li><a href="https://twitter.com/lauredi">@lauredi</a></li>
-                <li><a href="https://www.facebook.com/laure.dinateur">facebook</a></li>
-            </ul>
-        </section>
+        <div class="contact-cols">
+            <section>
+                <h2>Informations générales</h2>
+                <p>Actuellement, je ne cherche pas forcément de nouveaux travaux,
+                    mais je reste ouvert à toutes propositions. Si vous avez des questions
+                    n'hésitez pas à me contacter !</p>
+                <p>Appelez-moi sur mon mobile uniquement pour les demandes urgentes.
+                    Sinon, Twitter et email restent les meilleures façons de me joindre.</p>
+            </section>
+            <section class="infos">
+                <h2>Informations de contact</h2>
+                <ul>
+                    <li><a href="tel:0041741234567">074 123 45 67</a></li>
+                    <li><a href="mailto:laure@dinateur.com">laure@dinateur.com</a></li>
+                    <li><a href="https://twitter.com/lauredi">@lauredi</a></li>
+                    <li><a href="https://www.facebook.com/laure.dinateur">facebook</a></li>
+                </ul>
+            </section>
+        </div>
     </main>
 
     <footer>
