--- a/informations.html
+++ b/informations.html
@@ -12,8 +12,9 @@
     <!-- Icône de base du site : FAVICON -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
-<body>
+<body class="page-infos">
     <header>
         <a href="index.html">
             <div class="nom">Laure Dinateur</div>
@@ -22,7 +23,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Acceuil</a></li>
-                <li><a href="informations.html">Qui sui-je ?</a></li>
+                <li><a class="actif" href="informations.html">Qui sui-je ?</a></li>
                 <li><a href="contact.html">Me contacter</a></li>
             </ul>
         </nav>
