style photo laure

--- a/informations.html
+++ b/informations.html
@@ -29,7 +29,10 @@
         </nav>
     </header>
     <main>
-        <img src="images/laure-dinateur-graphiste.jpg" alt="Photo de Laure Dinateur">
+        <img src="images/laure-dinateur-graphiste.jpg"
+             alt="Photo de Laure Dinateur"
+             class="photo-laure"
+        >
 
         <h1>Laure Dinateur<br>Présentation</h1>
 
