--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
             </section>
             <section class="infos">
                 <h2>Informations de contact</h2>
-                <ul>
+                <ul class="contacts">
                     <li><a href="tel:0041741234567">074 123 45 67</a></li>
                     <li><a href="mailto:laure@dinateur.com">laure@dinateur.com</a></li>
                     <li><a href="https://twitter.com/lauredi">@lauredi</a></li>
