ajout des tableaux

--- a/index.html
+++ b/index.html
@@ -14,46 +14,91 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <header>
-        <a href="index.html">
-            <div class="nom">Laure Dinateur</div>
-            <div class="metier">Graphiste</div>
-        </a>
-        <!-- nav>ul>li*3>a -->
-        <nav>
-            <ul>
-                <li>
-                    <a href="index.html" class="actif">Accueil</a>
-                </li>
-                <li>
-                    <a href="informations.html">Qui suis-je ?</a>
-                </li>
-                <li>
-                    <a href="contact.html">Me contacter</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h1>Mes réalisations</h1>
-    </main>
-    <footer>
-        <!-- nav>ul>li*2>a>img -->
-        <nav>
-            <ul>
-                <li>
-                    <a href="https://twitter.com/lauredi">
-                        <img src="images/twitter-badge.png" alt="Lire mes derniers Tweets">
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com/laure.dinateur">
-                        <img src="images/facebook-badge.png" alt="Lire mes derniers posts">
-                    </a>
-                </li>
-            </ul>
-        </nav>
-        <div>&copy;2023 Laure Dinateur</div>
-    </footer>
+<header>
+    <a href="index.html">
+        <div class="nom">Laure Dinateur</div>
+        <div class="metier">Graphiste</div>
+    </a>
+    <!-- nav>ul>li*3>a -->
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html" class="actif">Accueil</a>
+            </li>
+            <li>
+                <a href="informations.html">Qui suis-je ?</a>
+            </li>
+            <li>
+                <a href="contact.html">Me contacter</a>
+            </li>
+        </ul>
+    </nav>
+</header>
+<main>
+    <h1>Mes réalisations</h1>
+    <!-- ul>li>a>figure>img+figcaption -->
+    <ul>
+        <li>
+            <a href="images/numbers-01.jpg">
+                <figure>
+                    <img src="images/numbers-01.jpg" alt="Tableau le chiffre 1">
+                    <figcaption>Expérimentation de couleurs</figcaption>
+                </figure>
+            </a>
+        </li>
+        <li>
+            <a href="images/numbers-02.jpg">
+                <figure>
+                    <img src="images/numbers-02.jpg" alt="Tableau le chiffre 2">
+                    <figcaption>Jeu de fondus</figcaption>
+                </figure>
+            </a>
+        </li>
+        <li>
+            <a href="images/numbers-06.jpg">
+                <figure>
+                    <img src="images/numbers-06.jpg" alt="Tableau le chiffre 6">
+                    <figcaption>80's style</figcaption>
+                </figure>
+            </a>
+        </li>
+        <li>
+            <a href="images/numbers-09.jpg">
+                <figure>
+                    <img src="images/numbers-09.jpg" alt="Tableau le chiffre 9">
+                    <figcaption>Travail avec les pinceaux</figcaption>
+                </figure>
+            </a>
+        </li>
+        <li>
+            <a href="images/numbers-12.jpg">
+                <figure>
+                    <img src="images/numbers-12.jpg" alt="Tableau le numéro 12">
+                    <figcaption>Répétition de formes</figcaption>
+                </figure>
+            </a>
+        </li>
+    </ul>
+
+
+</main>
+<footer>
+    <!-- nav>ul>li*2>a>img -->
+    <nav>
+        <ul>
+            <li>
+                <a href="https://twitter.com/lauredi">
+                    <img src="images/twitter-badge.png" alt="Lire mes derniers Tweets">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/laure.dinateur">
+                    <img src="images/facebook-badge.png" alt="Lire mes derniers posts">
+                </a>
+            </li>
+        </ul>
+    </nav>
+    <div>&copy;2023 Laure Dinateur</div>
+</footer>
 </body>
 </html>
