--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,21 @@
 
     <main>
         <h1>Me contacter</h1>
+
+        <h2>Informations générales</h2>
+        <p>Actuellement, je ne cherche pas forcément de nouveaux travaux,
+            mais je reste ouvert à toutes propositions.
+            Si vous avez des questions n'hésitez pas à me contacter !</p>
+        <p>Appelez-moi sur mon mobile uniquement pour les demandes urgentes.
+            Sinon, Twitter et email restent les meilleures façons de me joindre.</p>
+
+        <h2>Informations de contact</h2>
+        <ul>
+            <li><a href="tel:0041741234567">074 123 45 67</a></li>
+            <li><a href="mailto:laure@dinateur.com">laure@dinateur.com</a></li>
+            <li><a href="https://twitter.com/lauredi">@lauredi</a></li>
+            <li><a href="https://www.facebook.com/laure.dinateur">facebook</a></li>
+        </ul>
     </main>
 
     <footer>
