--- a/informations.html
+++ b/informations.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
+<body class="page-infos">
     <header>
         <a href="index.html">
             <div class="nom">Laure Dinateur</div>
@@ -37,6 +37,7 @@
     <main>
         <img src="images/laure-dinateur-graphiste.jpg"
              alt="Photo de Laure Dinateur"
+             class="photo-laure"
         >
         <h1>
             Laure Dinateur<br>
