--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <!-- Icône de base du site : FAVICON -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
-<body>
+<body class="page-index">
 <header>
     <a href="index.html">
         <div class="nom">Laure Dinateur</div>
@@ -37,7 +38,7 @@
 <main>
     <h1>Mes réalisations</h1>
     <!-- ul>li>a>figure>img+figcaption -->
-    <ul>
+    <ul class="realisations">
         <li>
             <a href="images/numbers-01.jpg">
                 <figure>
